// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WorkloadsDetectedTable should render empty result table 1`] = `
<Fragment>
  <TableToolbar
    className="pf-u-justify-content-space-between"
    isFooter={false}
  >
    <ToolbarGroup>
      <ToolbarItem
        className="pf-u-mr-xl"
      />
    </ToolbarGroup>
  </TableToolbar>
  <Bullseye>
    <EmptyState
      variant="full"
    >
      <EmptyStateIcon
        icon={[Function]}
      />
      <Title
        headingLevel="h5"
        size="lg"
      >
        No results found
      </Title>
      <EmptyStateBody>
        No results match the search criteria
      </EmptyStateBody>
    </EmptyState>
  </Bullseye>
</Fragment>
`;

exports[`WorkloadsDetectedTable should render error 1`] = `
<Component
  onRetry={[Function]}
/>
`;

exports[`WorkloadsDetectedTable should render result table 1`] = `
<Fragment>
  <TableToolbar
    className="pf-u-justify-content-space-between"
    isFooter={false}
  >
    <ToolbarGroup>
      <ToolbarItem
        className="pf-u-mr-xl"
      />
    </ToolbarGroup>
  </TableToolbar>
  <Table
    aria-label="Workloads detected"
    borders={false}
    cells={
      Array [
        Object {
          "key": "workload",
          "props": Object {},
          "title": "Workloads",
          "transforms": Array [
            [Function],
            [Function],
          ],
        },
        Object {
          "key": "osName",
          "props": Object {},
          "title": "OS",
          "transforms": Array [
            [Function],
            [Function],
          ],
        },
        Object {
          "key": "clusters",
          "props": Object {},
          "title": "In Clusters",
          "transforms": Array [
            [Function],
          ],
        },
        Object {
          "key": "vms",
          "props": Object {},
          "title": "VMs",
          "transforms": Array [
            [Function],
            [Function],
          ],
        },
      ]
    }
    className=""
    contentId="expanded-content"
    dropdownDirection="down"
    dropdownPosition="right"
    expandId="expandable-toggle"
    gridBreakPoint="grid-md"
    onCollapse={null}
    onExpand={null}
    onSort={[Function]}
    role="grid"
    rowLabeledBy="simple-node"
    rows={Array []}
    sortBy={Object {}}
    variant="compact"
  >
    <TableHeader
      className=""
    />
    <TableBody
      className=""
      onRowClick={[Function]}
      rowKey="id"
    />
    <tfoot>
      <tr
        className="workloads-detected-table-footer"
      >
        <td
          colSpan={10}
        >
          <Pagination
            itemCount={1}
            onPageInput={[Function]}
            onPerPageSelect={[Function]}
            onSetPage={[Function]}
            page={1}
            perPage={10}
          />
        </td>
      </tr>
    </tfoot>
  </Table>
</Fragment>
`;

exports[`WorkloadsDetectedTable should render skeleton 1`] = `
<Fragment>
  <TableToolbar
    className="pf-u-justify-content-space-between"
    isFooter={false}
  >
    <ToolbarGroup>
      <ToolbarItem
        className="pf-u-mr-xl"
      />
    </ToolbarGroup>
  </TableToolbar>
  <SkeletonTable
    colSize={4}
    rowSize={5}
  />
</Fragment>
`;
